--- a/scss/_detailProductPage.scss
+++ b/scss/_detailProductPage.scss
@@ -37,7 +37,7 @@
         justify-content: center;
         flex-direction: column;
         width: 50%;
-        margin: 10px 0 0 0;
+        margin: 5px 0 5px 0;
 
         .image-container {
             width: 100%;
@@ -63,74 +63,62 @@
         width: 94%;
         margin: 0 3%;
 
-        .sticky {
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-            border-top: 1px solid rgb(225, 225, 225);
-            padding: 0 10px;
-            background-color: white;
+        @include tablet {
+            position: -webkit-sticky;
             position: sticky;
-            bottom: 0;
-            left: 0;
+            width: 40%;
+            top: 120px;
+            margin: 0 5%;
+        }
 
-            .info-title-price-container {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                width: 100%;
-                margin: 20px 0;
-    
-                span {
-                    width: 100%;
-                }
-                .price {
-                    text-align: end;
-                    font-size: 0.8rem;
-                    font-weight: 700;
-                }
-    
-                @include tablet {
-                    flex-direction: row;
-                    flex-wrap: wrap;
-                    justify-content: flex-start;
-                    margin: 0 0 20px 0;
-                }
-            }
-    
-            .buttons-size-bag-container {
-                display: flex;
-                justify-content: space-between;
-                width: 100%;
-                height: 60px;
-    
-                button {
-                    width: 45%;
-                    height: 40px;
-                    border-color: rgb(225, 225, 225);
-                }
-                .choose-size {
-                    background-color: white;
-                }
-                .add-to-bag {
-                    background-color:#7f8375;
-                    color: white;
-                }
+        .desktop-title-price {
+            width: 100%;
+            display: none;
+            flex-direction: column;
+            justify-content: space-between;
+            font-size: 0.9rem;
+
+            .desktop-price {
+                font-weight: 600;
+                font-size: 0.7rem;
             }
 
             @include tablet {
-                position: relative;
+                display: flex;
             }
-            
         }
         
+        .fabric-container {
+            width: 100%;
+            text-align: center;
+            margin: 30px 0 0 0;
+
+            @include tablet {
+                text-align: left;
+            }
+
+            span {
+                font-size: 0.6rem;
+                color: #C5C7CE;
+            }
+        }
 
         .color-container {
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
             width: 100%;
             height: 60px;
-            margin: 80px 0 0 0;
+            margin: 30px 0 0 0;
+
+            @include tablet {
+                justify-content: flex-start;
+            }
+
+            .color-header {
+                font-size: 0.7rem;
+                margin-bottom: 10px;
+            }
 
             .color-picker {
                 display: flex;
@@ -139,6 +127,10 @@
                 height: 40px;
                 background-color: white;
                 border-color: rgb(225, 225, 225);
+
+                span {
+                    font-size: 0.6rem;
+                }
             }
         }
 
@@ -150,11 +142,19 @@
             width: 100%;
             margin: 40px 0;
 
+            @include tablet {
+                justify-content: flex-start;
+            }
+
             .size-header {
                 width: 100%;
                 text-align: center;
                 margin: 15px 0;
                 font-size: 0.8rem;
+
+                @include tablet {
+                    text-align: left;
+                }
             }
 
             button {
@@ -163,21 +163,133 @@
                 margin: 0 5px;
                 background-color: white;
                 border-color: rgb(225, 225, 225);
+
+                @include tablet {
+                    margin: 0;
+                }
             }
         }
 
+        .desktop-bag {
+            display: none;
+            justify-content: space-between;
+            width: 100%;
+            height: 60px;
 
-        @include tablet {
-            position: -webkit-sticky;
-            position: sticky;
-            width: 48%;
-            top: 120px;
-            margin: 10px 2% 0 0;
+            @include tablet {
+                display: flex;
+            }
+
+            button {
+                width: 100%;
+                height: 40px;
+                margin: 20px 0 0 0;
+                border-color: rgb(225, 225, 225);
+                background-color:#7f8375;
+                color: white;
+            }
         }
+
+        .product-description {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            margin: 20px 0 30px 0;
+
+            .description-header {
+
+                div {
+                    width: 100%;
+                    text-align: center;
+                    padding: 15px 0;
+                    font-size: 0.7rem;
+
+                    @include tablet {
+                        text-align: left;
+                    }
+
+                    span {
+                        text-decoration: underline;
+                    }
+                }
+            }
+            .description {
+                padding: 2% 10%;
+                font-size: 0.6rem;
+
+                @include tablet {
+                    padding: 2% 20% 2% 0;
+                }
+            }
+        }
+
     }
 
+    .mobile-sticky {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        border-top: 1px solid rgb(225, 225, 225);
+        padding: 0 10px;
+        background-color: white;
+        position: sticky;
+        position: -webkit-sticky;
+        bottom: 0;
+        left: 0;
+
+        @include tablet {
+            display: none;
+        }
+
+        .info-title-price-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+            margin: 10px 0;
+
+            span {
+                width: 100%;
+                font-size: 0.8rem;
+            }
+            .price {
+                text-align: end;
+                font-size: 0.7rem;
+                font-weight: 500;
+            }
+
+            @include tablet {
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: flex-start;
+                margin: 0 0 20px 0;
+            }
+        }
+
+        .buttons-about-bag-container {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            height: 60px;
+
+            button {
+                width: 48%;
+                height: 40px;
+                border-color: rgb(225, 225, 225);
+            }
+            .choose-size {
+                background-color: white;
+            }
+            .add-to-bag {
+                background-color:#7f8375;
+                color: white;
+            }
+        }
+
+        @include tablet {
+            position: relative;
+        }
+        
+    }
     
 }
-
-//webkit sticky
-//Lägg till desktopbilderna som none tills att man går över till desktop
