--- a/views/detailProductPage.ejs
+++ b/views/detailProductPage.ejs
@@ -36,42 +36,69 @@
 
     <!-- product info -->
     <div id="info-div">
-        
-        
-        <div class="color-container">
-            <button class="color-picker"><span>Choose color</span><span>+</span></button>
-        </div>
-        <div class="size-container">
-            <span class="size-header">Size</span>
-            <button>XS</button>
-            <button>S</button>
-            <button>M</button>
-            <button>L</button>
-            <button>XL</button>
-            <span class="size-header">Size guide</span>
+
+        <div class="desktop-title-price">
+            <span>
+                <%= clickedProduct.title %>
+            </span>
+            <span class="desktop-price">
+                <%= clickedProduct.price %> SEK
+            </span>
         </div>
 
-        <div class="sticky">
-            <div class="info-title-price-container">
-                <span>
-                    <%= clickedProduct.title %>
-                </span>
-                <span class="price">
-                    <%= clickedProduct.price %> SEK
-                </span>
+        <div class="fabric-container">
+            <span>organic cotton</span>
+        </div>
+        
+        <div class="color-container">
+            <span class="color-header">color</span>
+            <button class="color-picker"><span>choose color</span><span>+</span></button>
+        </div>
+        <div class="size-container">
+            <span class="size-header">size</span>
+                <button>XS</button>
+                <button>S</button>
+                <button>M</button>
+                <button>L</button>
+                <button>XL</button>
+        </div>
+
+        <div class="desktop-bag">
+            <button>add to bag</button>
+        </div>
+
+        <div class="product-description">
+            <div class="description-header">
+                <div><span>description</span> - delivery & payment - details</div>
             </div>
-            <div class="buttons-size-bag-container">
-                <button class="choose-size">Choose size +</button>
-                <button class="add-to-bag">Add to bag</button>
+            <div class="description">
+                <%= clickedProduct.description %>
             </div>
         </div>
-    
+
+    </div>
+
+    <!-- Sticky div that only appears in mobile -->
+    <div class="mobile-sticky">
+        <div class="info-title-price-container">
+            <span>
+                <%= clickedProduct.title %>
+            </span>
+            <span class="price">
+                <%= clickedProduct.price %> SEK
+            </span>
+        </div>
+        <div class="buttons-about-bag-container">
+            <button class="choose-size">product info +</button>
+            <button class="add-to-bag">add to bag</button>
+        </div>
     </div>
 
 
-
-
 </section>
+
+<%- include ("partial/footer.ejs") %>
+
 
 </body>
 </html>
